# ghool

./: .gitignore  CLAUDE.md  HUMANS.md  install.sh  pyproject.toml
ghool/: __main__.py  cli.py  core.py  paths.py  skill.md  smoketest.py
tests/: test_cli.py  test_core.py
