[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ghool"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
]

[project.scripts]
ghool = "ghool.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "responses>=0.23",
]

[tool.setuptools.package-data]
ghool = ["skill.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
